--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "65cd4a98",
    "metadata": {},
    "source": [
     "### 데이터 과학자가 판다스를 배우는 이유\n",
@@ -38,7 +37,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e5d569f",
    "metadata": {},
    "source": [
     "### 시리즈\n",
@@ -50,7 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6e356755",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +78,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e419060",
    "metadata": {},
    "source": [
     "#### 인덱스 구조\n",
@@ -93,8 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d0cf3641",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +123,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d33e558",
    "metadata": {},
    "source": [
     "### 원소 선택\n",
@@ -141,8 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "76e8bae7",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -171,8 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c8f51e0d",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,8 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "81601b7b",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +213,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c501eca",
    "metadata": {},
    "source": [
     "### 데이터프레임\n",
@@ -238,8 +228,347 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "\n",
+      "\n",
+      "   c0  c1  c2  c3  c4\n",
+      "0   1   4   7  10  13\n",
+      "1   2   5   8  11  14\n",
+      "2   3   6   9  12  15\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dict_data = {'c0': [1,2,3], 'c1': [4,5,6], 'c2': [7,8,9], 'c3': [10,11,12], 'c4': [13,14,15]}\n",
+    "\n",
+    "df = pd.DataFrame(dict_data)\n",
+    "\n",
+    "print(type(df))\n",
+    "print('\\n')\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    나이 성별   학교\n",
+      "준서  15  남  덕영중\n",
+      "예은  17  여  수리중\n",
+      "\n",
+      "\n",
+      "Index(['준서', '예은'], dtype='object')\n",
+      "\n",
+      "\n",
+      "Index(['나이', '성별', '학교'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame([[15, '남', '덕영중'], [17,'여','수리중']], index=['준서', '예은'], \n",
+    "            columns=['나이', '성별', '학교'])\n",
+    "\n",
+    "print(df)\n",
+    "print('\\n')\n",
+    "print(df.index)\n",
+    "print('\\n')\n",
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.index = ['현욱', '형욱']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['현욱', '형욱'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    나이 성별   학교\n",
+      "현욱  15  남  덕영중\n",
+      "형욱  17  여  수리중\n"
+     ]
+    }
+   ],
+   "source": [
+    " print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={'나이':'연령', '성별':'남녀', '학교':'소속'},  inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>연령</th>\n",
+       "      <th>남녀</th>\n",
+       "      <th>소속</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>현욱</th>\n",
+       "      <td>15</td>\n",
+       "      <td>남</td>\n",
+       "      <td>덕영중</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>형욱</th>\n",
+       "      <td>17</td>\n",
+       "      <td>여</td>\n",
+       "      <td>수리중</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    연령 남녀   소속\n",
+       "현욱  15  남  덕영중\n",
+       "형욱  17  여  수리중"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(index={'현욱':'학생1', '형욱':'학생2'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>연령</th>\n",
+       "      <th>남녀</th>\n",
+       "      <th>소속</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>학생1</th>\n",
+       "      <td>15</td>\n",
+       "      <td>남</td>\n",
+       "      <td>덕영중</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>학생2</th>\n",
+       "      <td>17</td>\n",
+       "      <td>여</td>\n",
+       "      <td>수리중</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     연령 남녀   소속\n",
+       "학생1  15  남  덕영중\n",
+       "학생2  17  여  수리중"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exam_data = {'math': [90,80,70], 'eng': [100,70,60], 'music': [77,88,99], 'physics':[100,80,60]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    math  eng  music  physics\n",
+      "현욱    90  100     77      100\n",
+      "청원    80   70     88       80\n",
+      "형욱    70   60     99       60\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_df = pd.DataFrame(exam_data, index=['현욱', '청원', '형욱'])\n",
+    "print(new_df)\n",
+    "print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    math  eng  music  physics\n",
+      "현욱    90  100     77      100\n",
+      "청원    80   70     88       80\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/seocheong-won/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:3997: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  errors=errors,\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = new_df[:]\n",
+    "df2.drop('형욱', inplace=True)\n",
+    "print(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c9428ea0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -261,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
