--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -16,22 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "국어    100\n",
-      "영어     80\n",
-      "수학     90\n",
-      "dtype: int64\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "<class 'pandas.core.series.Series'>\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/d3/mwhs_2c5655fp8r5xvs9dh680000gn/T/ipykernel_31178/4174046218.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mimport\u001B[0m \u001B[0mpandas\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mpd\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0mstudent1\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mpd\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mSeries\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m{\u001B[0m\u001B[0;34m'국어'\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;36m100\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'영어'\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;36m80\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'수학'\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;36m90\u001B[0m\u001B[0;34m}\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mstudent1\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'\\n'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'pandas'"
      ]
     }
    ],
@@ -58,36 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "국어    100\n",
-      "영어     80\n",
-      "수학     90\n",
-      "dtype: int64\n",
-      "\n",
-      "\n",
-      "수학    80\n",
-      "국어    90\n",
-      "영어    80\n",
-      "dtype: int64\n",
-      "\n",
-      "\n",
-      "<class 'pandas.core.series.Series'>\n",
-      "\n",
-      "\n",
-      "              국어        수학      영어\n",
-      "덧셈    190.000000   170.000   160.0\n",
-      "뺄셈     10.000000    10.000     0.0\n",
-      "곱셈   9000.000000  7200.000  6400.0\n",
-      "나눗셈     1.111111     1.125     1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "student1 = pd.Series({'국어':100, '영어':80, '수학':90})\n",
     "student2 = pd.Series({'수학': 80, '국어':90, '영어':80})\n",
@@ -109,35 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "국어     NaN\n",
-      "영어    80.0\n",
-      "수학    90.0\n",
-      "dtype: float64\n",
-      "\n",
-      "\n",
-      "수학    80\n",
-      "국어    90\n",
-      "dtype: int64\n",
-      "\n",
-      "\n",
-      "<class 'pandas.core.series.Series'>\n",
-      "\n",
-      "\n",
-      "     국어        수학  영어\n",
-      "덧셈  NaN   170.000 NaN\n",
-      "뺄셈  NaN    10.000 NaN\n",
-      "곱셈  NaN  7200.000 NaN\n",
-      "나눗셈 NaN     1.125 NaN\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NaN 값이 있는 시리즈 연산\n",
     "import pandas as pd\n",
@@ -165,21 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       국어        수학    영어\n",
-      "덧셈   90.0   170.000  80.0\n",
-      "뺄셈  -90.0    10.000  80.0\n",
-      "곱셈    0.0  7200.000   0.0\n",
-      "나눗셈   0.0     1.125   inf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sr_add = student1.add(student2, fill_value=0)\n",
     "sr_sub = student1.sub(student2, fill_value=0)\n",
@@ -204,17 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python 3.7.6\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python --version"
    ]
