--- a/Part 1.ipynb
+++ b/Part 1.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7df0c4ac",
+   "id": "74a98685",
    "metadata": {},
    "source": [
     "### 행 인덱스/열 이름 설정\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "14c83999",
+   "id": "3c8223d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dd9d8cc7",
+   "id": "006c80cf",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e3bbead",
+   "id": "1cf9316c",
    "metadata": {},
    "source": [
     "데이터프레임에 rename() 메소드를 적용하면 행 인덱스 또는 열 이름의 일부를 선택하여 변경할 수 있다. 단, 원본 객체를 직접 수정하는 것이 아니라 새로운 데이터프레임 객체를 반환하는 점에 유의한다. 원본 객체를 변경하려면 inplace=True 옵션을 사용한다.  \n",
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b2c64681",
+   "id": "1a885bd7",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6801b78e",
+   "id": "ba327729",
    "metadata": {},
    "source": [
     "### 행/열 삭제\n",
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8ee7e875",
+   "id": "11dd5168",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a37a03c6",
+   "id": "e0aca3ec",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd225298",
+   "id": "9f3eb4d5",
    "metadata": {},
    "source": [
     "### 행 선택\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "43df30dc",
+   "id": "3cbe19e7",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4e5001fe",
+   "id": "a2b1fc13",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1b00922a",
+   "id": "0c5ec131",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7ea70a2",
+   "id": "04346196",
    "metadata": {},
    "source": [
     "### 열 선택\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "44f9acaa",
+   "id": "41d1b1e1",
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3394fbea",
+   "id": "e6780aa0",
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "066f1ffc",
+   "id": "a9b5e91b",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3c2cc3a5",
+   "id": "34d537e3",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c721582d",
+   "id": "f9e35d70",
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b7dc4e2",
+   "id": "98f95021",
    "metadata": {},
    "source": [
     "### 원소 선택\n",
@@ -1000,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "59ba0ea7",
+   "id": "66e4ee14",
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "db7fce59",
+   "id": "9eec4918",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a9cee49e",
+   "id": "93b74e33",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b9c34612",
+   "id": "aecc9fde",
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4154fbff",
+   "id": "a176e342",
    "metadata": {},
    "source": [
     "### 열 추가\n",
@@ -1183,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "2cfafab8",
+   "id": "4cba1461",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e7b84832",
+   "id": "736f9086",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6679b7e2",
+   "id": "874a7b66",
    "metadata": {},
    "source": [
     "### 행 추가\n",
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e2cd391e",
+   "id": "693a270a",
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3ee458e9",
+   "id": "f8d01bc8",
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b079a93",
+   "id": "13c588ae",
    "metadata": {},
    "source": [
     "### 원소 값 변경\n",
@@ -1373,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "c586e041",
+   "id": "7b6e33bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "cbefda21",
+   "id": "82cdb1b6",
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1474,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "147dbeba",
+   "id": "f42f62e4",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "18cb37c6",
+   "id": "2e8815ab",
    "metadata": {},
    "outputs": [
     {
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af318c99",
+   "id": "083750e8",
    "metadata": {},
    "source": [
     "### 행, 열의 위치 바꾸기\n",
@@ -1569,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "18cd9c7e",
+   "id": "37b56a71",
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4c6848d",
+   "id": "2af7c75b",
    "metadata": {},
    "source": [
     "### 인덱스 활용\n",
@@ -1630,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "d4417a9d",
+   "id": "57819747",
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "61783188",
+   "id": "4d028c32",
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1682,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "72dbc6d9",
+   "id": "ae4c5867",
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9347db91",
+   "id": "e5af2d9a",
    "metadata": {},
    "source": [
     "### 행 인덱스 재배열\n",
@@ -1718,7 +1718,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "8ad5c441",
+   "id": "f2790061",
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80a90727",
+   "id": "0a4be7fa",
    "metadata": {},
    "source": [
     "### 행 인덱스 초기화\n",
@@ -1774,7 +1774,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "c1b364eb",
+   "id": "90638bac",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "766d3de0",
+   "id": "2cf6d7b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bd33ffc",
+   "id": "4b1b5475",
    "metadata": {},
    "source": [
     "### 행 인덱스를 기준으로 데이터프레임 정렬\n",
@@ -1826,7 +1826,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "2f00e855",
+   "id": "327306ad",
    "metadata": {},
    "outputs": [
     {
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce10721c",
+   "id": "df5ea482",
    "metadata": {},
    "source": [
     "### 특정 열의 데이터 값을 기준으로 데이터프레임 정렬하기 \n",
@@ -1858,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "543db2da",
+   "id": "26406ceb",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "171a5542",
+   "id": "d8b6cb04",
    "metadata": {},
    "source": [
     "### 산술연산\n",
@@ -1906,7 +1906,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "bd5c9c00",
+   "id": "44ca236b",
    "metadata": {},
    "outputs": [
     {
@@ -1930,31 +1930,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "db267566",
+   "execution_count": 94,
+   "id": "23ad3177",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "percentage = student1/200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "33a9225f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "국어    0.50\n",
+      "영어    0.40\n",
+      "수학    0.45\n",
+      "dtype: float64\n",
+      "\n",
+      "\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(percentage)\n",
+    "print('\\n')\n",
+    "print(type(percentage))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6a49a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "869883e5",
+   "id": "b6d58706",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "raw",
-   "id": "9ab6145a",
+   "id": "fe1aa12e",
    "metadata": {},
    "source": []
   }
