--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -4,8 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### "
+    "### 외부파일 읽어오기\n",
+    "판다는 다양한 형태의 외부 파일을 읽어와서 데이터프레임으로 변환하는 함수를 제공한다.  \n",
+    "어떤 파일이든 판다스 객체인 데이터프레임으로 변환되고 나면 판다스의 모든 함수와 기능을 자유롭게 사용할 수 있다.  \n",
+    "\n",
+    "|File Format|Reader|Writer|\n",
+    "|---------|---------|----|\n",
+    "|csv|read_csv|to_csv|\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|제목|내용|설명|\n",
+    "|------|---|---|\n",
+    "|테스트1|테스트2|테스트3|\n",
+    "|테스트1|테스트2|테스트3|\n",
+    "|테스트1|테스트2|테스트3|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
