python data type

--- a/02_basic_syntax.ipynb
+++ b/02_basic_syntax.ipynb
@@ -194,10 +194,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 3. 식별자\n",
     "- 변수, 함수, 클래스, 모듈 등의 이름을 식별자라고 합니다.\n",
@@ -205,10 +203,116 @@
     "    - 소문자, 대문자, 숫자, 언더스코어(_) 를 사용합니다. \n",
     "    - 가장 앞에 숫자 사용 불가\n",
     "    - 예약어의 사용 불가 : def, class, try, except ...\n",
-    "    - 컨벤션\n",
-    "        - snake case : fast_campus \n",
-    "        - camel case :"
+    "    - 컨벤션(합성어를 식별자로 사용할 때)\n",
+    "        - snake case : fast_campus : 변수, 함수 \n",
+    "        - camel case : FastCampus, fastCampus : 클래스 "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. 데이터 타입\n",
+    "- RAM 저장공간을 효율적으로 사용하기 위해서 저장공간의 타입을 설정\n",
+    "- 동적타이핑\n",
+    "    - 변수 선언시 저장되는 값에 따라서 자동으로 데이터 타입이 설정\n",
+    "- 기본 데이터 타입 : int, float, bool, str\n",
+    "- 컬렉션 데이터 타입 : list, tuple, dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(int, str)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "b = \"python\"\n",
+    "type(a), type(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(int, float, bool, str)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 기본 데이터 타입 : int, float, bool, str\n",
+    "a = 1\n",
+    "b = 1.2\n",
+    "c = True # False\n",
+    "d = \"data\"\n",
+    "type(a), type(b), type(c), type(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a + c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
