--- a/02_basic_syntax.ipynb
+++ b/02_basic_syntax.ipynb
@@ -1142,7 +1142,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. 연산자\n"
+    "### 6. 연산자\n",
+    "- 산술연산자 : +, -, *, /, //, %, **\n",
+    "- 할당연산자 : 특정 변수에 누적시켜서 연산 : +=, //=, **= , ... \n",
+    "- 비교연산자 : >, <, ==, !=, <=, >= : 결과로 True, False\n",
+    "- 논리연산자 : True, False 를 연산 : or, and, not\n",
+    "- 멤버연산자 : 특정 데이터가 있는지 확인할 때 사용 : not in, in "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "b = 2\n",
+    "a+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.25"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1 + 4) / 2 ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "a = a + 10\n",
+    "a = a + 10\n",
+    "a += 10\n",
+    "a += 10\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(False, False, True)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 비교 연산\n",
+    "print(a, b)\n",
+    "a < b, a == b, a != b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, True, False)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 논리 연산\n",
+    "True and False, True or False, not True or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, False, False)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 멤버 연산\n",
+    "ls = [\"jin\", \"andy\", \"john\"]\n",
+    "\n",
+    "\"andy\" in ls, \"michel\" in ls, \"john\" not in ls"
    ]
   },
   {
