--- a/02_basic_syntax.ipynb
+++ b/02_basic_syntax.ipynb
@@ -1292,6 +1292,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 랜덤함수\n",
+    "import random\n",
+    "\n",
+    "random.randint(1, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insert string : 10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'10'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 입력함수\n",
+    "data = input(\"Insert string : \")\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 해결의 책 : 질문을 하면 질문에 대한 답변을 해주는 책 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 솔루션을 리스트로 작성\n",
+    "# 질문 입력 받음\n",
+    "# 솔루션의 갯수에 맞게 랜덤한 index 정수 값을 생성\n",
+    "# index에 해당하는 솔루션 리스트의 데이터를 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solutions = [\n",
+    "    \"무엇을 하든 잘 안될 것 이다.\",\n",
+    "    \"생각지도 않게 좋은 일이 생길 것 이다.\",\n",
+    "    \"무엇을 상상하든 그 이상이다.\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "질문을 입력하세요 : 저는 오늘 좋은 결정을 한 것일까요?\n",
+      "무엇을 상상하든 그 이상이다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "input(\"질문을 입력하세요 : \")\n",
+    "\n",
+    "idx = random.randint(0, len(solutions) - 1)\n",
+    "\n",
+    "print(solutions[idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
