--- a/02_basic_syntax.ipynb
+++ b/02_basic_syntax.ipynb
@@ -2064,10 +2064,224 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "global_variable = 100\n",
+    "def random():\n",
+    "    global global_variable\n",
+    "    global_variable = 10\n",
+    "    print(global_variable)\n",
+    "random()\n",
+    "global_variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-94-5babdb492051>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-94-5babdb492051>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    0a = 4\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "0a = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_class =1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_data = {'rental_time' : \n",
+    "                [5, 34, 21, 6, 0, 3, 18, 20, 25, 8, 11, 10, 28, 3, 12, 14, 19, 18, 24]\n",
+    "            }\n",
+    "\n",
+    "def ppc_wrong_data(data):\n",
+    "    # 여기에 코드를 작성해주세요.\n",
+    "    time_list = data['rental_time']\n",
+    "    new_time_list = [None if n > 24 else n for n in time_list]\n",
+    "    print(new_time_list.count(None))\n",
+    "    return new_time_list\n",
+    "\n",
+    "\n",
+    "data_ppc = ppc_wrong_data(raw_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, None, 21, 6, 0, 3, 18, 20, None, 8, 11, 10, None, 3, 12, 14, 19, 18, 24]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_ppc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Fail\n",
+    "# Fail\n",
+    "# Success, summation_for, args : (35, 6374, 324, 23), return value : 6756\n",
+    "# Fail\n",
+    "# ===TEST DONE==="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def int_checker(func):\n",
+    "    def decorated(*args):\n",
+    "        checker = True\n",
+    "        for arg in args:\n",
+    "            print(arg)\n",
+    "            if not isinstance(arg, int):\n",
+    "                checker = False\n",
+    "        if checker:\n",
+    "            result = func(*args)\n",
+    "            print(\"Success, {}, args : {}, return value : {}\".format(func.__name__, args, result))\n",
+    "        else:\n",
+    "            print(\"Fail\")\n",
+    "    return decorated\n",
+    "\n",
+    "@int_checker\n",
+    "def summation(*args):\n",
+    "    return sum(args)\n",
+    "\n",
+    "\n",
+    "@int_checker\n",
+    "def summation_for(*args):\n",
+    "    result = 0\n",
+    "    for num in args:\n",
+    "        result += num\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2275\n",
+      "2.4\n",
+      "7203\n",
+      "Fail\n",
+      "string\n",
+      "2352\n",
+      "4334345\n",
+      "Fail\n",
+      "35\n",
+      "6374\n",
+      "324\n",
+      "23\n",
+      "Success, summation_for, args : (35, 6374, 324, 23), return value : 6756\n",
+      "4\n",
+      "52\n",
+      "77.2\n",
+      "342\n",
+      "Fail\n",
+      "===TEST DONE===\n"
+     ]
+    }
+   ],
+   "source": [
+    "summation(1, 2275, 2.4, 7203)\n",
+    "summation('string', 2352, 4334345)\n",
+    "summation_for(35, 6374, 324, 23)\n",
+    "summation_for(4, 52, 77.2, 342)\n",
+    "print(\"===TEST DONE===\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 구구단 출력 (가로 출력)\n",
+    "    - 이중 for문 안에 for문\n",
+    "    - print : end=\"\\t\"\n",
+    "    - string : format\n",
+    "```        \n",
+    "2*1=2 3*1=3 ... 9*1=1\n",
+    "...\n",
+    "2*9=18 3*9=27...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(2, 10):\n",
+    "    for j in range(1, 10):\n",
+    "        print(\"{i}\")"
+   ]
   }
  ],
  "metadata": {
